wrote code to calculate lm of average stand height by nn grass percent cover... R2, slope, intercpet

--- a/1.1_transect_continuous.Rmd
+++ b/1.1_transect_continuous.Rmd
@@ -582,6 +582,57 @@ model.s2_summary <- summary(model.s2)
 r_squared_s2 <- round(model.s2_summary$r.squared, 3)
 print(paste("Multiple R^2:", r_squared_s2))
 # [1] "Multiple R^2: 0.684" <-- sites 1 and 2
+
+ggplot(data = (cover_byleaftype_wide %>%  
+                 filter(site == "1" | site == "2") %>% 
+                 filter(shrub_native_nonsclero > 0.01) 
+               ), 
+       aes( x = shrub_native_nonsclero*100, 
+            y = grass_nonnative_NA*100)
+       ) + 
+   geom_point(aes(color = site), size = 3) +
+   scale_color_manual(values = c("maroon", "pink", "maroon", "maroon", "maroon")) +
+  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval 
+  labs(
+    x = "Sage scrub cover (%)",
+    y = "Non-native grass cover (%)",
+    title = "Linear regression of non-native grass by sage scrub shrub percent cover"
+    ) +
+scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
+  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks
+  theme_bw()
+
+##################
+
+# Fit the linear model <- for sites INT1-5
+model.s3 <- lm(grass_nonnative_NA ~ shrub_native_nonsclero, # response variable ~ independent variable
+              data = (cover_byleaftype_wide %>%  
+               filter(site != "1" & site != "2") %>% 
+                 filter(shrub_native_nonsclero > 0.01)
+              ))
+model.s3_summary <- summary(model.s3)
+r_squared_s3 <- round(model.s3_summary$r.squared, 3)
+print(paste("Multiple R^2:", r_squared_s3))
+# [1] "Multiple R^2: 0.693" <-- sites INT
+
+ggplot(data = (cover_byleaftype_wide %>%  
+                 filter(site != "1" & site != "2") %>% 
+                 filter(shrub_native_nonsclero > 0.01) 
+               ), 
+       aes( x = shrub_native_nonsclero*100, 
+            y = grass_nonnative_NA*100)
+       ) + 
+   geom_point(aes(color = site), size = 3) +
+   scale_color_manual(values = c("maroon", "red", "cyan", "green", "blue")) +
+  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval 
+  labs(
+    x = "Sage scrub cover (%)",
+    y = "Non-native grass cover (%)",
+    title = "Linear regression of non-native grass by sage scrub shrub percent cover"
+    ) +
+scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
+  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks
+  theme_bw()
 ```
 
 ### x = total shrub
@@ -848,3 +899,76 @@ ggplot(data = cover_bylfstatus_wide) +
 #cover_bylfstatus_wide %>% filter(grass_native > 0) %>% group_by(site_rep, year) %>%  summarize(native_grass = grass_native)
 
 ```
+
+### canopy height
+```{r}
+# stand height 
+
+standheight <- read_csv("deg_maxheight.csv",
+                             col_types = cols(
+                               year = col_character(),
+                               site = col_character(),
+                               rep = col_character(),
+                               distance = col_character(),
+                               species = col_character(),
+                               height_cm = col_double()
+                               )) %>%
+  dplyr::select('site', 'rep', 'species', 'height_cm') %>% 
+  # mutate(rep = case_when(rep == "1" ~ "01", # oldname ~ newname
+  #                        rep == "2" ~ "02",
+  #                        rep == "3" ~ "03",
+  #                        rep == "4" ~ "04",
+  #                        rep == "5" ~ "05",
+  #                        rep == "6" ~ "06",
+  #                        rep == "7" ~ "07",
+  #                        rep == "8" ~ "08",
+  #                        rep == "9" ~ "09",
+  #                             TRUE ~ rep)) %>% 
+  mutate(site_rep = paste(site, rep, sep = "_")) %>% 
+  group_by(site_rep) %>% 
+  summarise(avgheight_cm = mean(height_cm, na.rm = TRUE)) %>% 
+  ungroup() 
+  
+
+height_cover <- cover_bylfstatus_wide %>% left_join(standheight, by = "site_rep")
+
+
+# Fit the linear model: canopy height x nn grass cover
+model.h <- lm(avgheight_cm ~ grass_nonnative, data = height_cover) # response variable ~ independent variable
+
+# Print the summary of the model
+model.h.summary <- summary(model.h)
+
+# Extract the R^2 value
+r_squared <- round(model.h.summary$r.squared, 3)
+print(paste("Multiple R^2:", r_squared))
+# [1] "Multiple R^2: 0.366"
+# print slope and intercept
+cf <- round(coef(model.h), 3)
+cat("Intercept:", cf[1], "\n")
+cat("Slope:", cf[2], "\n")
+# > cat("Intercept:", cf[1], "\n")
+# Intercept: 164.522 
+# > cat("Slope:", cf[2], "\n")
+# Slope: -93.231 
+
+
+ggplot(data = height_cover) + 
+  geom_point(aes(x = grass_nonnative * 100, 
+                 y = avgheight_cm)) +
+    xlim(0, 100) +
+  ylim(0, 300) +
+  labs(
+    x = "Percent cover non-native grass (%)",
+    y = "Average stand height (cm)",
+    title = "Mean stand height by Nonnative Grass percent cover",
+     color = "Legend") +
+   # scale_y_continuous(breaks = seq(0, max(300), by = 50)) +
+  geom_smooth(aes(x = grass_nonnative * 100, 
+                  y = avgheight_cm), 
+              method = "lm", se = TRUE, linetype = "solid", show.legend = TRUE) +
+  theme_bw()
+```
+
+
+### shrub density
